Add possibility to edit messages
